Weather report component with basic structure

--- a/src/app/weather-report/weather-report.component.html
+++ b/src/app/weather-report/weather-report.component.html
@@ -1,1 +1,44 @@
-<p>weather-report works!</p>
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <div class="col-sm-12 text-center">
+            <h3>Find weather in your city</h3>
+        </div>
+        <table>
+            <tbody>
+                <tr>
+                    <td>Temparature</td><td>{{ weather.main.temp }}</td>
+                </tr>
+                <tr>
+                    <td>Feels like</td><td>{{ weather.main.feels_like }}</td>
+                </tr>
+                <tr>
+                    <td>Humidity</td><td>{{ weather.main.humidity }}</td>
+                </tr>
+                <tr>
+                    <td>Pressure</td><td>{{ weather.main.pressure }}</td>
+                </tr>
+                <tr>
+                    <td>Sunrise</td><td>{{ weather.sys.sunrise * 1000 | date:'H:mm' }}</td>
+                </tr>
+                <tr>
+                    <td>Sunset</td><td>{{ weather.sys.sunset * 1000 | date:'H:mm' }}</td>
+                </tr>
+                <tr>
+                    <td>Geo coords</td><td>{{ weather.coord.lat }}, {{ weather.coord.lon }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+
+
+
+<div class="container">
+    <div class="input-group mt-5">
+        <input class="form-control" type="text" #userInput placeholder="Enter city name">
+        <div class="input-group-append">
+            <button class="input-group-text btn btn-outline-primary" (click)="getCity(userInput.value)">Submit</button>
+        </div>
+    </div>
+</div>
