moving the city input field to the top

--- a/src/app/weather-report/weather-report.component.html
+++ b/src/app/weather-report/weather-report.component.html
@@ -1,6 +1,11 @@
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <div class="col-sm-12 text-center">
+            <div class="container">
+                <div class="input-group mt-5">
+                    <input class="form-control" type="text" #userInput placeholder="Enter city name">
+                        <button class="input-group-text btn btn-outline-primary" (click)="getCity(userInput.value)">Find</button>
+            </div>
             <h3>Find weather in your city</h3>
         </div>
         <table>
@@ -28,17 +33,5 @@
                 </tr>
             </tbody>
         </table>
-    </div>
-</div>
-
-
-
-
-<div class="container">
-    <div class="input-group mt-5">
-        <input class="form-control" type="text" #userInput placeholder="Enter city name">
-        <div class="input-group-append">
-            <button class="input-group-text btn btn-outline-primary" (click)="getCity(userInput.value)">Submit</button>
-        </div>
     </div>
 </div>
